src/objects/RWE_Data_Asset_Approval__c.object
<CustomObject>
    <description>It will be used to invoke Approval Processes with different User for each Data Asset Record</description>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Legal Approval</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending License Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Request_Arrived__c</fullName>
        <label>Last Request Arrived</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RWE_Data_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RWE Data Asset</label>
        <referenceTo>RWE_Data_Asset__c</referenceTo>
        <relationshipLabel>RWE Data Asset Approvals</relationshipLabel>
        <relationshipName>RWE_Data_Asset_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relevant_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Relevant Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>RWE Data Asset Approvals</relationshipLabel>
        <relationshipName>RWE_Data_Asset_Approvals</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RWE_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Valid_Till__c</fullName>
        <label>Valid Till</label>
        <type>Date</type>
    </fields>
    <label>RWE Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Approval_Status__c</columns>
        <columns>Relevant_Contact__c</columns>
        <columns>RWE_Data_Asset__c</columns>
        <columns>Valid_Till__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>RWE Data Asset Approval Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RWE Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>